1998-12-01  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* error_message.c: Use "#if defined(MSDOS) || ..." instead of 
		"#if !defined(unix)", since not all Unix compilers define
		"unix".

1998-07-02  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* com_err.c (MacMessageBox): Change TextBox to TETextBox to match
		up with CodeWarrior changes.

Wed Feb 18 16:33:07 1998  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Remove trailing slash from thisconfigdir.  Fix up
	BUILDTOP for new conventions.

Wed Jan 28 17:54:57 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* configure.in, Makefile.in: Remove CopySrcHeader from
		configure.in, and move functionality to Makefile.in

	* Makefile.in: Define BUILDTOP and thisconfigdir in the Makefile

Tue Oct  7 07:43:05 1997  Ezra Peisach  <epeisach@mit.edu>

	* Makefile.in (SRCS): Add $(srcdir) as prefix to srcs.

Mon Jul 21 12:00:24 1997  Ezra Peisach  <epeisach@mit.edu>

	* error_message.c (error_message): Mask error code with
		ERRCODE_MASK to handle case where 32bit ints are zero
		filed in the gssapi layer.

	* error_table.h: Define ERRCODE_MAX, the maximum allowed error
		code (32bits).  

Tue Mar 18 15:07:40 1997  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* com_err.h: Add 'extern "C"' for C++ compatibility; also check for
		__cplusplus since some C++ compilers don't set __STDC__

Mon Mar  3 14:57:35 1997  Ezra Peisach  <epeisach@mit.edu>

	* error_message.c: Don't declare sys_nerr on Macintosh.

	* com_err.c: Fix MacMessageBox prototype.

Sat Mar  1 11:54:02 1997  Sam Hartman  <hartmans@luminous.MIT.EDU>

	* com_err.h: Do not declare com_err_hook extern if you want it
 	static in the source file. [383]
	

Sat Feb 22 12:18:47 1997  Richard Basch  <basch@lehman.com>

	* Makefile.in: Move list file construction to win-post.in

	* et_c.awk et_h.awk error_message.c com_err.c:
		Put back #ifdef unix, and also based it on AIX.
		We do NOT want the compatibility interface on any new
		architectures.  Since we have distributed Kerberos on