@@ -1,7 +1,8 @@
 1998-12-01  Theodore Ts'o  <tytso@rsts-11.mit.edu>
 
-	* error_message.c: Use "#if defined(MSDOS) || ..." instead of 
-		"#if !defined(unix)", since not all Unix compilers define
+	* com_err.h, error_table.h, error_message.c: Use "#if
+	        defined(MSDOS) || ..." instead of "#if
+	        !defined(unix)", since not all Unix compilers define
 		"unix".
 
 1998-07-02  Theodore Ts'o  <tytso@rsts-11.mit.edu>
